--- a/src/Pages/Home/Home_styles.module.css
+++ b/src/Pages/Home/Home_styles.module.css
@@ -1,11 +1,22 @@
 .home{
      width: 80vw;
      color: #fff;
-     background-image: linear-gradient(to right, #333333 0%, black 100%);
+     margin-left: 20vw;
+            
+       
+       
 }
 
 
 .homeContainer{
      display: flex;
-     background-image: linear-gradient(to right, #333333 30%, black 80%);
+     width: 100%;
+     background: #08090a ;
+     
+
+}
+.homeContainer2{
+     display: flex;
+     width: 100%;
+      
 }
