--- a/src/Pages/Home/Home_styles.module.css
+++ b/src/Pages/Home/Home_styles.module.css
@@ -1,22 +1,16 @@
-.home{
-     width: 80vw;
+.container {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     height: 100vh;
+   }
+   
+   .content {
+     flex: 1;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     background: #08090a;
      color: #fff;
-     margin-left: 20vw;
-            
-       
-       
-}
-
-
-.homeContainer{
-     display: flex;
-     width: 100%;
-     background: #08090a ;
-     
-
-}
-.homeContainer2{
-     display: flex;
-     width: 100%;
-      
-}
+   }
+   
