--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -1,28 +1,21 @@
-.sideBarOut{    
-    height: 90vh;
-    width: 20vw;
-    margin: auto 2.5vw;
-    
-}
-
+.sideBarOut{
+    height: 80vh;
+} 
+  
 .sideBody{
     border-radius: 20px;
-    height: 100%;
-    width: 100%;    
     display: flex;
     flex-wrap: wrap;
-    background: #fff; 
-    border: 1px solid #f0f0f0;
+    background: #fff;       
+    font-family: 'Saira', sans-serif;
+    font-weight: bold;
      
-     font-family: 'Saira', sans-serif;
-     font-weight: bold;
-   
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  
 }
 
 .informations{
-    width: 100%; 
-    height: 100%;
+    width: 100%;      
+     
      
 }
 
@@ -31,20 +24,21 @@
     height: 200px;
     margin: 45px auto;
     border-radius: 50%;     
+    padding: 10px;
+    box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
 .name{
     display: flex;
-    justify-content: center;     
-     
+    justify-content: center;          
     box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
-
     margin: 25px auto;
     width: 80%;
     padding: 8px;
     border-radius: 20px;
     background: #08090a ;
     color: #fff;
+    gap: 5px;
      
 }
 .socials{
