--- a/src/components/NextPageButton/NextPageButton.module.css
+++ b/src/components/NextPageButton/NextPageButton.module.css
@@ -1,16 +1,23 @@
-
 .home_down{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    right: calc(50vw - 250px);
-    bottom: 10px;
-    position: fixed;
-   
-  
-    
+    position: absolute;
+    color: #000;
+    position: absolute;
+    bottom: 15px;
 }
-.home_down:hover{
-    cursor: pointer;
-     transform: scale(1.1);
+
+
+@media (min-width: 700px) {
+    .home_down{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        right: calc(50vw - 250px);
+        bottom: 10px;
+        position: fixed;
+         color: #fff;
+    }
+    .home_down:hover{
+        cursor: pointer;
+         transform: scale(1.1);
+    }
 }
