--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -1,31 +1,35 @@
-.sideBarOut{
-    height: 80vh;
-} 
-  
-.sideBody{
-    border-radius: 20px;
+.sideBarOut{   
+    width: 100vw;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 999;
+    max-height: 100vh;
+}
+
+.sideBody{     
     display: flex;
     flex-wrap: wrap;
     background: #fff;       
     font-family: 'Saira', sans-serif;
     font-weight: bold;
-     
-  
+    height: 100vh;
+    width: 100%;
 }
 
 .informations{
-    width: 100%;      
-     
-     
+    width: 100%; 
+      
 }
 
 .picture{  
-    width:200px;
-    height: 200px;
+    width:260px;
+    height: 260px;
     margin: 45px auto;
     border-radius: 50%;     
     padding: 10px;
     box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.1);
+    
 }
 
 .name{
@@ -38,9 +42,10 @@
     border-radius: 20px;
     background: #08090a ;
     color: #fff;
-    gap: 5px;
-     
+    gap: 5px;     
+    font-size: 20px;
 }
+
 .socials{
     display: flex;
     justify-content: center; 
@@ -50,7 +55,8 @@
     padding: 8px;
     border-radius: 20px;
     gap: 5px;
-    color: #fff;     
+    color: #fff;   
+    font-size: 20px;  
 }
 
 
@@ -60,4 +66,74 @@
     height: 100%;
     margin: auto auto;
     
+}
+
+
+
+@media (min-width:700px) {
+    
+    .sideBody{
+        border-radius: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        background: #fff;       
+        font-family: 'Saira', sans-serif;
+        font-weight: bold;
+        width: 400px;
+        height: 100vh;
+    }
+    
+    .informations{
+        width: 100%;               
+         
+    }
+    .sideBarOut{
+        max-height: 100vh;
+     max-width: 100vw;
+    }
+    
+    .picture{  
+        width:200px;
+        height: 200px;
+        margin: 45px auto;
+        border-radius: 50%;     
+        padding: 10px;
+        box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.1);
+    }
+    
+    .name{
+        display: flex;
+        justify-content: center;          
+        box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
+        margin: 25px auto;
+        width: 80%;
+        padding: 8px;
+        border-radius: 20px;
+        background: #08090a ;
+        color: #fff;
+        gap: 5px;
+         
+    }
+    .socials{
+        display: flex;
+        justify-content: center; 
+        box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
+        margin: 100px auto;
+        width: 80%;
+        padding: 8px;
+        border-radius: 20px;
+        gap: 5px;
+        color: #fff;     
+    }
+    
+    
+    .contactme{
+        color: #403030;
+        width: 100%;
+        height: 100%;
+        margin: auto auto;
+        
+    }
+    
+
 }
