--- a/src/components/TextAnimation/TextAnimation.module.css
+++ b/src/components/TextAnimation/TextAnimation.module.css
@@ -1,7 +1,10 @@
 .textAnimation{
-    max-height:'100vh';
+     
+    
     display: 'flex';
     justify-content: 'center';
     align-items: 'center'; 
-    height: '100vh' 
+    height: '100vh' ;
+   
+    
 }
