--- a/src/Pages/Home/Home_styles.module.css
+++ b/src/Pages/Home/Home_styles.module.css
@@ -16,7 +16,9 @@
      margin-left: 400px;
    }
    
-
+   .textAnimationContent{
+    display: none;
+   }
 
    @media (min-width:700px) {
     .container {
@@ -26,7 +28,9 @@
       height: 100vh;
       max-width: 100vw;
     }
-    
+    .textAnimationContent{
+      display: inline;
+     }
     .content {
       flex: 1;
       display: flex;
