--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -3,8 +3,9 @@
     position: absolute;
     left: 0;
     top: 0;
-    z-index: 999;
+    z-index: 9999;
     max-height: 100vh;
+     
 }
 
 .sideBody{     
@@ -14,11 +15,14 @@
     font-family: 'Saira', sans-serif;
     font-weight: bold;
     height: 100vh;
-    width: 100%;
+    width: 100vw;
+    position: fixed;
+
 }
 
 .informations{
     width: 100%; 
+    width: 100vw;
       
 }
 
