--- a/src/components/TextAnimation/TextAnimation.module.css
+++ b/src/components/TextAnimation/TextAnimation.module.css
@@ -1,10 +1,14 @@
 .textAnimation{
-     
-    
-    display: 'flex';
-    justify-content: 'center';
-    align-items: 'center'; 
-    height: '100vh' ;
+    display: none;
+}
+
+
+@media (min-width:700px) {
+    .textAnimation{
+        display: 'flex';
+        justify-content: 'center';
+        align-items: 'center'; 
+        height: '100vh' ;
+    }
    
-    
 }
